# POO---APRENDIZADOS

00 - Inicio/: Anotações
01 - Pokemon Zumbi/: main.cpp
01 - Pokemon Zumbi -- Rev.0 (Basico)/: 01_Diagrama.MD
01 - Pokemon Zumbi -- Rev.0 (Básico)/: Diagrama  Solicitação  main.cpp
02 - Pokemons Evolutions -- Rev.0/: 02_Diagrama.MD  02_main.cpp  CMakeLists.txt  Diagrama.MD  Pokemon.cpp  Pokemon.h  Pokemon_Agua.h  Pokemon_Fogo.cpp  Pokemon_Fogo.h  Pokemon_Planta.h  README.MD
